# vs-muxtools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
vsmuxtools/: __init__.py
vsmuxtools/extension/: __init__.py  audio.py  chapters.py  sub.py
vsmuxtools/utils/: __init__.py  audio.py  source.py  src.py  types.py
vsmuxtools/video/: __init__.py  clip_metadata.py  encoders.py  resumable.py  settings.py  testing.py
vsmuxtools/video/encoders/: __init__.py  base.py  ffmpeg.py  intermediary.py  standalone.py  types.py
