
[project]
name = "vsmuxtools"
version = "0.2.1"
description = "The extension to muxtools with vapoursynth and encoding stuff"
authors = [{ name = "Vodes", email = "vodes.imp@gmail.com" }]
dependencies = [
    "vapoursynth>=66",
    "vsjetpack>=0.2.2",
    "numpy>=1.24.3",
    "muxtools>=0.2.2",
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
requires-python = ">=3.11"
readme = "README.md"
license = "MPL-2.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Source Code" = "https://github.com/Vodes/vs-muxtools"

[tool.ruff]
line-length = 150
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = ["E722"]
fixable = ["F541", "F401", "E712", "E711"]
exclude = ["__init__.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
