
[project]
name = "vsmuxtools"
version = "0.4.0"
description = "The extension to muxtools with vapoursynth and encoding stuff"
authors = [{ name = "Vodes", email = "vodes.imp@gmail.com" }]
dependencies = [
    "vapoursynth>=67",
    "vsjetpack>=0.7.0",
    "numpy>=1.24.3",
    "muxtools>=0.4.0",
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
requires-python = ">=3.11"
readme = "README.md"
license = "MPL-2.0"

[dependency-groups]
dev = [
    "pytest>=8.3.4, <9.0.0",
    "ruff>=0.6.5",
    "scipy-stubs>=1.15.2.1",
    "types-psutil>=7.0.0.20250218",
    "types-requests>=2.31.0.20240406",
    "py7zr>=0.20.5",
    "sox>=1.5.0",
    "mypy==1.17.1",
    "ty==0.0.1a19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Source Code" = "https://github.com/Vodes/vs-muxtools"

[tool.uv.sources]
muxtools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/muxtools.git" }

[tool.ruff]
line-length = 150
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = ["E722"]
fixable = ["F541", "F401", "E712", "E711"]
exclude = ["__init__.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.mypy]
local_partial_types = true
allow_redefinition_new = true
